p_set_01 mario_less

--- a/p_set_01/makefile
+++ b/p_set_01/makefile
@@ -1,2 +1,7 @@
+p_set_01 : hello mario_less
+
 hello : hello.c
 	cc -lcs50 -o hello hello.c
+
+mario_less : mario_less.c
+	cc -lcs50 -o mario_less mario_less.c
