--- a/p_set_01/makefile
+++ b/p_set_01/makefile
@@ -1,7 +1,10 @@
-p_set_01 : hello mario_less
+p_set_01 : hello mario_less mario_more
 
 hello : hello.c
 	cc -lcs50 -o hello hello.c
 
 mario_less : mario_less.c
 	cc -lcs50 -o mario_less mario_less.c
+
+mario_more : mario_more.c
+	cc -lcs50 -o mario_more mario_more.c
