p_set_01 cash, images of problem results

--- a/p_set_01/makefile
+++ b/p_set_01/makefile
@@ -1,4 +1,4 @@
-p_set_01 : hello mario_less mario_more
+p_set_01 : hello mario_less mario_more cash
 
 hello : hello.c
 	cc -lcs50 -o hello hello.c
@@ -8,3 +8,6 @@ mario_less : mario_less.c
 
 mario_more : mario_more.c
 	cc -lcs50 -o mario_more mario_more.c
+
+cash : cash.c
+	cc -lcs50 -o cash cash.c
