--- a/week_02/p_set_02/makefile
+++ b/week_02/p_set_02/makefile
@@ -4,7 +4,7 @@ caesar : caesar.c
 	cc -g -lcs50 -o caesar caesar.c
 
 readability : readability.c
-	cc -g -lcs50 -o readability readability.c
+	cc -g -lm -lcs50 -o readability readability.c
 
 substitution : substitution.c
 	cc -g -lcs50 -o substitution substitution.c
