--- a/weeks/week_04/p_set_04/makefile
+++ b/weeks/week_04/p_set_04/makefile
@@ -1,7 +1,10 @@
-p_set_04: filter_less
+p_set_04: filter_less filter_more
 
 filter_less: filter_less.c helpers.o
 	clang -ggdb3 -gdwarf-4 -O0 -Qunused-arguments -std=c11 -Wall -Werror -Wextra -Wno-gnu-folding-constant -Wno-sign-compare -Wno-unused-parameter -Wno-unused-variable -Wshadow -lm -o filter_less filter_less.c helpers.o
+
+filter_more: filter_more.c helpers.o
+	clang -ggdb3 -gdwarf-4 -O0 -Qunused-arguments -std=c11 -Wall -Werror -Wextra -Wno-gnu-folding-constant -Wno-sign-compare -Wno-unused-parameter -Wno-unused-variable -Wshadow -lm -o filter_more filter_more.c helpers.o
 
 helpers.o: helpers.c helpers.h
 	cc -c helpers.c
