p_set_04 recover solution

--- a/weeks/week_04/p_set_04/makefile
+++ b/weeks/week_04/p_set_04/makefile
@@ -1,4 +1,4 @@
-p_set_04: filter_less filter_more
+p_set_04: filter_less filter_more recover
 
 filter_less: filter_less.c helpers.o
 	clang -ggdb3 -gdwarf-4 -O0 -Qunused-arguments -std=c11 -Wall -Werror -Wextra -Wno-gnu-folding-constant -Wno-sign-compare -Wno-unused-parameter -Wno-unused-variable -Wshadow -lm -o filter_less filter_less.c helpers.o
@@ -8,6 +8,9 @@ filter_more: filter_more.c helpers.o
 
 helpers.o: helpers.c helpers.h
 	cc -c helpers.c
+
+recover : recover.c
+	cc -o recover recover.c
 
 clean:
 	rm -rf *.o
