--- a/.gitignore
+++ b/.gitignore
@@ -69,7 +69,7 @@ dkms.conf
 .nfs*
 
 ### VisualStudioCode ###
-.vscode/*
+.vscode/
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
