--- a/weeks/week_09/p_set_09/requirements.txt
+++ b/weeks/week_09/p_set_09/requirements.txt
@@ -1,5 +1,7 @@
-cs50
-Flask
-Flask-Session
-requests
-mysql
+cs50==9.0.0
+Flask==2.2.2
+Flask-Session==0.4.0
+Jinja2==3.1.2
+python-dotenv==0.21.1
+requests==2.28.1
+Werkzeug==2.2.2
